--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VisitaMedicaMvvm">
         <activity
+            android:name=".VisitaPacienteActivity"
+            android:exported="true" />
+        <activity
             android:name=".FormularioPacienteActivity"
             android:exported="true" />
         <activity
